Add a script to test the parser against the Crystal stdlib.
There's a file with a list of files that are expected to fail, if they
doesn't match the test will fail.

Bad news, current grammar has only 0.01% of success on compiler stdlib.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+      - name: Install Crystal
+        uses: crystal-lang/install-crystal@v1
+        with:
+          crystal: latest
 
       - run: npm install
       - run: npm test
